--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,14 @@
-name: Trigger on Issue with Tag
+name: main
 
 on:
   issues:
     types: [opened, labeled]
 
 jobs:
-  trigger_on_tag:
+  run-benchmark:
     permissions:
       contents: write
+      pull-requests: write
     if: |
       github.event.action == 'opened' && contains(github.event.issue.labels.*.name, 'trigger') ||
       github.event.action == 'labeled' && github.event.label.name == 'trigger'
@@ -28,14 +29,9 @@ jobs:
       - run: npm run build
       - run: npm run setup -- ${{ github.event.issue.title }}
       - run: npm run run
-      - name: commit results
-        run: |
-          set -e
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "${{ github.event.issue.title }}
-
-          fixed: #${{ github.event.issue.number }}
-          "
-          git push origin main:gh-${{ github.event.issue.number }}
+      - uses: peter-evans/create-pull-request@v7
+        with:
+          commit-message: "${{ github.event.issue.title }}\n\nfixed: #${{ github.event.issue.number }}"
+          branch: gh-${{ github.event.issue.number }}
+          title: "${{ github.event.issue.title }}"
+          body: "fixes: #${{ github.event.issue.number }}."
