--- a/package.json
+++ b/package.json
@@ -6,15 +6,27 @@
     "watch": "tsc --watch",
     "build": "tsc",
     "setup": "node dist/setup.js",
-    "run": "node dist/run.js"
+    "run": "node dist/run.js",
+    "start": "vite",
+    "docs:build": "vite build"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.7.2",
-    "typescript": "^5.9.3"
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
+    "@vitejs/plugin-react": "^5.0.4",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.9"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.4",
+    "@mui/x-charts": "^8.14.0",
     "assemblyscript": "0.27.37",
-    "fs-extra": "^11.3.2"
+    "fs-extra": "^11.3.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
