--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: ./.github/action/setup-ccache
         with:
           size: 512M
-          key: ccache-${{ matrix.os }}-build-${{ hashFiles('**/CMakeLists.txt') }}
+          key: ccache-${{ matrix.os }}-build-${{ github.run_id }}
           restore-keys: |
             ccache-${{ matrix.os }}-build-
       - run: npm run build
