--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -38,6 +38,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      pages: write
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
@@ -61,3 +63,4 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add ./data
           git commit -m "daily benchmark results" && git push || echo "no changes to commit"
+      - uses: ./.github/action/pages
